# usb-examples

./: LICENSE  README.md
device/usb-bulk-raspberry-pi-pico2/: Cargo.toml
device/usb-bulk-raspberry-pi-pico2/src/: main.rs
device/usb-bulk-stm32-nucleo-f429zi/: Cargo.toml  rust-coolchain.toml  stm32f429zi.svd
device/usb-bulk-stm32-nucleo-f429zi/.cargo/: config.toml
device/usb-bulk-stm32-nucleo-f429zi/src/: main.rs
host/usb-bulk-python/: README.md  main.py  pyproject.toml
host/usb-bulk-rust/: Cargo.toml  README.md
host/usb-bulk-rust/src/: main.rs
